--- a/unit/lector_dcd/makefile
+++ b/unit/lector_dcd/makefile
@@ -8,8 +8,9 @@ EXECUTABLE = test_lector_dcd.exe
 LINKFLAGS = -lgfortran
 CMPFLAGS = -Wall -ggdb  -c
 
-RM = rm -f
+RM = rm
 
+VPATH = ../../
 
 
 .PHONY: all clean cleanall rebuild objs
@@ -17,10 +18,10 @@ RM = rm -f
 all: $(EXECUTABLE)
 
 clean:
-	$(RM) *.o
+	-$(RM) *.o
 
 cleanall: clean
-	rm $(EXECUTABLE)
+	-$(RM) $(EXECUTABLE)
 
 rebuild: cleanall all
 
@@ -32,13 +33,13 @@ objs: $(OBJS)
 $(EXECUTABLE): $(OBJS)
 	$(CC) $^ $(LINKFLAGS) -o $@  
 
-t_lector_dcd.o: t_lector_dcd.c ../../common.h ../../sys_wrapers.h ../../lector_dcd.h
+t_lector_dcd.o: t_lector_dcd.c common.h sys_wrapers.h lector_dcd.h
 	$(CC) $< $(CMPFLAGS)
 
-lector_dcd.o: ../../lector_dcd.f
+lector_dcd.o: lector_dcd.f
 	$(FC) $< $(CMPFLAGS)
 
-sys_wrapers.o: ../../sys_wrapers.c
+sys_wrapers.o: sys_wrapers.c
 	$(CC) $< $(CMPFLAGS)
 
 
